# keke-proto-tool

./: .eslintrc.cjs  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  MODBUS_IMPLEMENTATION_COMPLETE.md  MODBUS_IMPLEMENTATION_SUMMARY.md  MODBUS_STATUS_AND_NEXT_STEPS.md  README.md  SETUP_WIKI.html  WIKI_READY.md  clippy.toml  commitlint.config.js  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  quality.yml  release.yml
.husky/: pre-commit
docs/: Cli-ink-design.md  DEVELOPMENT.md  MICROSOFT_STORE_QUICK_SETUP.md  MICROSOFT_STORE_SETUP.md  command-palette.md  example-protocol.kkp.yaml  menu-update-check.md  proto-shell-ink-design.md  proto.md  protocol-format-guide.md  protocol-manager-improvements.md  protocol-store-troubleshooting.md  protocol-store.md  tool-development-guide.md
docs/api/: README.md
examples/protocols/: hj212-complete.kpt  modbus-energy-meter.kpt  modbus-plc-siemens.kpt  modbus-rtu.kpt  modbus-tcp.kpt  mqtt-json.kpt
public/docs/: about.md  user-guide.md
release-notes/: 0.0.11.md  0.0.12.md  0.0.13.md  0.0.14.md  0.0.2.md  0.0.5.md  0.0.8.md  README.md  default-template.md
scripts/: build.js  publish-wiki-after-enable.ps1  publish-wiki.ps1  publish-wiki.sh  release.js  version.js
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_assistant_commands.rs  ai_assistant_db.rs  commands.rs  lib.rs  main.rs  menu.rs  shell_executor.rs  shell_history_commands.rs  shell_history_db.rs  types.rs  utils.rs
src-tauri/src/logging/: export.rs  manager.rs  mod.rs
src-tauri/src/network/: connection_manager.rs  mod.rs  modbus.rs  mqtt.rs  sse.rs  tcp.rs  udp.rs  websocket.rs
src-tauri/src/parser/: bitfield.rs  cache.rs  compiler.rs  complex_types.rs  conditional.rs  crc_validator.rs  custom_validator.rs  escape.rs  factor_translator.rs  fingerprint.rs  framing.rs  mod.rs  protocol_matcher.rs  protocol_parser.rs  range_validator.rs  repository.rs  result.rs  rules.rs  schema.rs  state_machine.rs  types.rs  validation_report.rs
src-tauri/src/session/: buffer.rs  manager.rs  mod.rs  state.rs
src-tauri/src/storage/: connector.rs  manager.rs  mod.rs  mysql.rs
src/components/: DataFormatSelector.tsx  EditConfigModal.tsx  MenuUpdateNotification.tsx  Modal.tsx  NewSessionModal.tsx  ProtocolEditorModal.tsx  ProtocolTypeOverview.tsx  ShortcutHelp.tsx  ThemeToggle.tsx  UpdateModal.tsx  UpdateNotification.tsx  WelcomeDialog.tsx
src/constants/: version.ts
src/contexts/: SessionContext.tsx
src/hooks/: useCommandPalette.ts  useKeyboardShortcuts.ts  useNativeMenu.ts  usePlatform.ts  useResponsive.ts  useTerminalAutoComplete.ts  useTheme.ts  useUpdateCheck.ts
src/pages/: AboutPage.tsx  ConnectionDetailPage.tsx  ConnectionPage.tsx  LogsPage.tsx  PlaybackPage.tsx  PluginsPage.tsx  ReleaseNotesPage.tsx  ReportIssuePage.tsx  SessionPage.tsx  SettingsPage.tsx  StoragePage.tsx  ToolboxPage.tsx  UserGuidePage.tsx  WorkbenchPage.tsx  WorkspacePage.tsx
src/services/: AutoSendService.ts  BackendLogService.ts  ConnectionManagerService.ts  DatabaseConnectors.ts  KeyboardShortcutManager.ts  LogService.ts  NetworkService.ts  NotificationService.ts  PerformanceMonitor.ts  ProtocolParsingService.ts  ProtocolRepositoryService.ts  ProtocolStoreService.ts  ShellExecutor.ts  ShellHistoryService.ts  StatusBarService.ts  StorageService.ts  ToolBridges.ts  ToolEventBus.ts  ToolExecutor.ts  ToolIntegrationManager.ts  ToolLazyLoader.ts  ToolRegistry.ts  ToolStateManager.ts  ToolboxService.ts  VersionUpdateService.ts
src/stores/: AppStore.ts  MinimizedModalsStore.ts
src/styles/: globals.css
src/test/: App.test.tsx  setup.ts
src/tools/: CRCCalculatorTool.tsx  DataConverterTool.tsx  MessageGeneratorTool.tsx  ProtocolParserTool.tsx  SignatureGeneratorTool.tsx  TimestampConverterTool.tsx  index.ts
wiki/: Building-From-Source.md  Contributing.md  FAQ.md  Getting-Started.md  Home.md  PUBLISH_INSTRUCTIONS.md  Plugin-Development.md  Protocol-Format-Guide.md  Protocol-Store.md  Protocol-System.md  Protocol-Troubleshooting.md  README.md  Tool-Development.md  Troubleshooting.md  User-Guide.md
(+139 files in other folders)
