[package]
name = "keke-proto-tool"
version = "0.0.13"
description = "跨平台的网络报文工作站，集连接调试、协议解析、规则/插件扩展、数据筛选存储、AI 辅助与批量导出为一体"
authors = ["ProtoTool Team <team@prototool.dev>"]
license = "MIT"
repository = "https://github.com/chenqi92/keke-proto-tool"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keke_proto_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = ["macos-private-api"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-opener = "2.0.0-rc"

# Async runtime and networking
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros", "io-util", "time"] }
tokio-util = { version = "0.7", features = [] }
async-trait = "0.1"
tokio-tungstenite = "0.20"
url = "2.4"
futures-util = "0.3"

# MQTT support
rumqttc = "0.24"

# Modbus support
tokio-modbus = "0.14"
tokio-serial = "5.4"

# HTTP client for SSE and version checking
reqwest = { version = "0.11", features = ["stream", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.0"
dashmap = "5.5"  # Concurrent HashMap for session management
hex = "0.4"

# Parsing system dependencies
serde_yaml = "0.9"  # YAML parsing for .kkp.yaml rules
regex = "1.10"      # Pattern matching for protocol detection
crc = "3.0"         # CRC calculations for validation
lru = "0.12"        # LRU cache for compiled rules
nom = "7.1"         # Parser combinators for complex parsing
bitflags = "2.4"    # Bit manipulation utilities
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"  # Timestamp handling

# Database for logging
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
csv = "1.3"
rand = "0.8"  # CSV export support

# File dialog
rfd = "0.14"  # Native file dialogs
